# MaaDiagnosticExpert

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: python-mcp-build.yml  python-mcp-publish.yml
contracts/: README.md  core-result.schema.json  corpus-catalog.schema.json  corpus-prepare-input.schema.json  corpus-prepare-result.schema.json  corpus-search-input.schema.json  corpus-search-result.schema.json  diagnostic-pipeline-input.schema.json  error.schema.json  filesystem-batch-input.schema.json  filesystem-runtime-input.schema.json  maa-log-analyzer-batch-input.schema.json  maa-log-analyzer-runtime-input.schema.json  maa-support-extension-batch-input.schema.json  maa-support-extension-runtime-input.schema.json  profile-catalog.schema.json  profile.schema.json  runtime-info.schema.json
docs/: core-domain-model.md  monorepo-architecture.md  package-boundaries.md  python-mcp-stdio-investigation.md  quickstart-log-analysis.md
examples/log-analysis/: README.md  diagnostic-pipeline-input.template.json  filesystem-runtime-input.template.json  mla-runtime-input.template.json
python/: README.md
python/agent/: README.md
python/mcp/: README.md  pyproject.toml
python/mcp/scripts/: sync_contracts.py
python/mcp/src/maa_diagnostic_mcp/: __init__.py  cli.py  contracts.py  errors.py  runtime.py  server.py  tools.py
python/mcp/tests/: test_runtime.py
