[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maa-diagnostic-expert-mcp"
version = "0.1.0"
description = "Python MCP transport layer for MaaDiagnosticExpert core runtime."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Windsland52" }
]
keywords = ["maa", "diagnostics", "mcp", "logs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = []

[project.scripts]
maa-diagnostic-mcp = "maa_diagnostic_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/Windsland52/MaaDiagnosticExpert"
Repository = "https://github.com/Windsland52/MaaDiagnosticExpert"
Issues = "https://github.com/Windsland52/MaaDiagnosticExpert/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
maa_diagnostic_mcp = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
