[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maa-diagnostic-expert-mcp"
version = "0.1.0"
description = "Python MCP transport layer for MaaDiagnosticExpert core runtime."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Windsland52" }
]
keywords = ["maa", "diagnostics", "mcp", "logs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
    "mcp==1.27.0",
]

[project.scripts]
maa-diagnostic-mcp = "maa_diagnostic_mcp.cli:main"
maa-diagnostic-mcp-server = "maa_diagnostic_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Windsland52/MaaDiagnosticExpert"
Repository = "https://github.com/Windsland52/MaaDiagnosticExpert"
Issues = "https://github.com/Windsland52/MaaDiagnosticExpert/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
maa_diagnostic_mcp = ["py.typed", "_bundled_contracts/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
